webpack/styles/navigation/_nav.scss
.cdc-utlt-nav {
  @extend .navbar;
  background-color: $cdc-dark-blue;
  height: 50px;
  margin-bottom: 0px;

  a {
    color: white;
  }
  a:hover, a:focus {
    color: $cdc-dark-blue;
  }
}

a.cdc-brand:hover {
  color:white;
}

a.cdc-brand:focus {
  color:white;
}

.cdc-brand {
  @extend .navbar-brand;
  a:hover, a:focus {
    color: white;
  }
  padding: 13px 0px 0px 0px;
}

.cdc-nav {
  @extend .nav;
  padding: 0px;
}

.cdc-utlt-navbar-nav {
  @extend .navbar-nav;
  padding: 0px 0px 0px 20px;
  .utlt-navbar-item>a {
    height: 50px;
  }
  .utlt-navbar-icon {
    padding-right: 6px;
  }
  span {
    margin-left: 6px;
  }
}

.cdc-nav-main {
  @extend .navbar;
  background-color: $cdc-blue;
  text-align: center;
  height: 60px;
  margin-bottom: 20px;
  border-radius: 0px;
  .cdc-navbar-nav {
    width: 100%;
    height: 60px;
    text-align: center;
    > li {
      float: none;
      display: inline-block;
    }
  }
  .cdc-navbar-item {
    height: 60px;
    padding: 18px 18px 0px 18px;
    .item-navbar-icon {
      margin-right: 6px;
    }
    a:hover, a:focus, a:visited {
      background-color: white;
      height: 60px;
    }
    span {
      margin-left: 6px;
    }
  }
}

.alerts-badge {
  @extend .badge;
  background-color: red;
  margin-left: 8px;
}

.notif-button {
  height: 60px;
  min-width: 100px;
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 18px;
  margin-top: -18px;
  margin-left: -18px;
  margin-right: -18px;
}

.notification-menu-item {
  list-style-type: none;
  margin-left: 0px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 15px;
  padding-right: 15px;
}

.notification-menu-item:hover {
  background-color: #e4e4e4;
}

.cdc-nav-dropdown {
  @extend .dropdown-menu;
  min-width: 200px;
  ul {
    list-style-type: none;
    padding-left: 0px;
    padding-right: 0px;
    max-height: 250px;
    width: 250px;
    overflow-y: auto;
    overflow-x: hidden;
  }
}

.skiptocontent {
  position: absolute;
  top: 0px;
  left: 0px;
  background: $cdc-dark-blue;
  color: white;
  width: 15%;
  -webkit-transition: top 1s ease-out, background 1s linear;
  transition: top 1s ease-out, background 1s linear;
  a:focus {
    position: absolute;
    top: 40px;
    left: 0px;
    padding: 10px;
    background: $cdc-dark-blue;
    color: white;
    -webkit-transition: top .1s ease-in, background .5s linear;
    transition: top .1s ease-in, background .5s linear;
  }
}

